# noto

./: Cargo.toml  README.md  TODO.md
src/: commands.rs  config.rs  consts.rs  main.rs  utils.rs
