[package]
name = "noto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.9", features = ["derive"] }
confy = "0.4.0"
serde = "^1.0"
serde_derive = "^1.0"
chrono = "0.4.19"
dirs = "4.0.0"
